--- a/package.json
+++ b/package.json
@@ -6,13 +6,34 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
+    "compression": "^1.6.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "consolidate": "^0.14.4",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "express": "^4.13.4",
+    "express-session": "^1.14.2",
+    "glob": "^7.1.1",
+    "helmet": "^3.1.0",
     "jade": "~1.11.0",
+    "lodash": "^4.16.6",
+    "lusca": "^1.4.1",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.6.7",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-env": "^0.4.4",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-protractor-coverage": "^0.2.17",
+    "load-grunt-tasks": "^3.5.2",
+    "winston": "^2.3.0"
   }
 }
