--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@angular/common": "^2.1.2",
+    "@angular/compiler": "^2.1.2",
+    "@angular/core": "^2.1.2",
+    "@angular/forms": "^2.1.2",
+    "@angular/http": "^2.1.2",
+    "@angular/platform-browser": "^2.1.2",
+    "@angular/platform-browser-dynamic": "^2.1.2",
+    "@angular/router": "^3.1.2",
+    "@angular/router-deprecated": "^2.0.0-rc.2",
+    "@angular/upgrade": "^2.1.2",
+    "angular2-in-memory-web-api": "0.0.21",
     "body-parser": "^1.15.2",
+    "bower": "^1.8.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
@@ -25,7 +37,13 @@
     "mongoose": "^4.6.7",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
-    "serve-favicon": "^2.3.0"
+    "passport": "^0.3.2",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-rc.2",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.5.1",
+    "systemjs": "^0.19.41",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "grunt-concurrent": "^2.3.1",
@@ -33,7 +51,11 @@
     "grunt-env": "^0.4.4",
     "grunt-nodemon": "^0.4.2",
     "grunt-protractor-coverage": "^0.2.17",
+    "grunt-ts": "^6.0.0-beta.3",
+    "grunt-tsc": "^1.0.12",
     "load-grunt-tasks": "^3.5.2",
+    "typescript": "^2.0.9",
+    "typings": "^2.0.0",
     "winston": "^2.3.0"
   }
 }
